k8s/prometheus/prometheus-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-loadbalancer
  namespace: monitoring-tech-challenge
  labels:
    app: prometheus-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: prometheus-pod
  ports:
      - protocol: TCP
        port: 9090
        targetPort: 9090
