k8s/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus-service
spec:
  type: NodePort
  selector:
    app: prometheus-pod
  ports:
      - port: 9090
        targetPort: 9090
        nodePort: 31003
